--- a/package.json
+++ b/package.json
@@ -14,7 +14,10 @@
     "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1"
   },
   "dependencies": {
+    "@apollo/client": "^3.2.5",
+    "faunadb": "^3.0.1",
     "gatsby": "^2.25.3",
+    "graphql": "^15.4.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0"
   },
